YelpCamp/v2/readme.md
# Style the campgrounds page
* Add a better header/title
* Make campgrounds display in a grid

# Style the Navbar and Form
* Add a navbar to all templates
* Style the new campground form

# Add Mongoose
* Install and configure mongoose
* Setup campground modeling
* Use campground model inside of our routes

# Show Page
* Review the RESTful routes we've seen so far
* Add description to our campground model
* Show db.collection.drop()
* Add a show rroute/template

RESTFUL ROUTES

    Name    URL         Verb    Discription
_________________________________________________________
    INDEX   /dogs       GET     Display a list of all dogs
    NEW     /dogs/new   GET     Displays form to make a new dogs
    CREATE  /dogs       POST    Add new dog to DB
    SHOW    /dogs/:id   GET     Shows info about one dog
* Add description to our campground model
* Show db.collecction.drop()
* Add  show route/template

